--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,9 @@
     package="es.carlossc212.consultaagenda_archivos">
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
+    <!--<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />-->
 
     <application
         android:allowBackup="true"
@@ -15,7 +15,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ConsultaAgenda_Archivos">
         <activity
-            android:name=".view.AjustesActivity"
+            android:name=".view.SettingsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_settings"
+            android:parentActivityName=".view.MainActivity"/>
+        <activity
+            android:name=".view.old.AjustesActivity"
             android:exported="false" />
         <activity
             android:name=".view.MainActivity"
